--- a/templates/san_pham/them.html
+++ b/templates/san_pham/them.html
@@ -93,8 +93,15 @@
                                     </select>
                                 </div>
                             </div>
-                        </div>
-                        
+                        <div class="mb-3">
+    <label for="hang_san_xuat_id" class="form-label">Hãng sản xuất</label>
+    <select class="form-select" id="hang_san_xuat_id" name="hang_san_xuat_id">
+        <option value="">-- Chọn hãng sản xuất --</option>
+        {% for hang in hangs %}
+        <option value="{{ hang.id }}">{{ hang.ten }}</option>
+        {% endfor %}
+    </select>
+</div>
                         <div class="form-group mb-3">
                             <label for="mo_ta" class="form-label">Mô tả</label>
                             <textarea class="form-control" id="mo_ta" name="mo_ta" rows="3"></textarea>
